<resources>
    <string name="app_name">NewsApp</string>

    <!-- Text to display in the list when there are no articles [CHAR LIMIT=NONE] -->
    <string name="no_articles_found">No articles found. Try again later.</string>
    <!-- Text to display in the list when there is no internet connection [CHAR LIMIT=NONE] -->
    <string name="no_internet_connection">No internet connection.</string>

    <!-- Settings Menu Item [CHAR LIMIT=NONE] -->
    <string name="settings_menu_item">Settings</string>
    <!-- Settings Activity Title [CHAR LIMIT=NONE] -->
    <string name="settings_title">Articles Settings</string>

    <!-- Strings For Filter By Preference [CHAR LIMIT=30] -->
    <string name="settings_filter_by_label">Filter by</string>
    <string name="settings_filter_by_key" translatable="false">filter_by</string>

    <!-- Strings For Order-By Preference [CHAR LIMIT=30] -->
    <string name="settings_order_by_label">Order By</string>
    <string name="settings_order_by_key" translatable="false">order_by</string>
    <string name="settings_order_by_default" translatable="false">@string/settings_order_by_newest_value</string>

    <!-- Label for order-by newest option [CHAR LIMIT=20] -->
    <string name="settings_order_by_newest_label">Newest</string>
    <string name="settings_order_by_newest_value" translatable="false">newest</string>

    <!-- Label for order-by oldest option [CHAR LIMIT=20] -->
    <string name="settings_order_by_oldest_label">Oldest</string>
    <string name="settings_order_by_oldest_value" translatable="false">oldest</string>
    <string name="thumbnail">Thumbnail</string>
    <string name="switch1">switch_preference_1</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="path">com.example.newsapp</string>
</resources>
