<?xml version="1.0" encoding="utf-8"?>

<PreferenceScreen
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:title="@string/settings_title">

    <ListPreference
            android:defaultValue="@string/settings_order_by_default"
            android:entries="@array/settings_order_by_labels"
            android:entryValues="@array/settings_order_by_values"
            android:key="@string/settings_order_by_key"
            android:title="@string/settings_order_by_label" />

    <EditTextPreference
            android:key="@string/settings_filter_by_key"
            android:title="@string/settings_filter_by_label" />
    <SwitchPreference
            android:id="@+id/swtich1"
           android:title="My switch"
           android:key="switch_preference_1"/>


</PreferenceScreen>